src/style.css
body {
  background-color: #ecf7e5;
  background-image: url("../img/food-illustration-sandwich-by-Vexels.svg");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
}

h1 {
  font-family: "Archivo Black", sans-serif;
  font-weight: 700;
  font-size: 20px;
  color: #3f3d56;
  max-width: 800px;
}

footer {
  opacity: 0.9;
  padding: 10px;
  margin: 10px auto;
  background-color: white;
  font-family: "Josefin sans";
  font-size: 11px;
  border-radius: 4%;
  max-width: 100%;
  border-radius: 4px;
}
form {
  display: flex;
}
a {
  color: #78a95a;
}

.welcome {
  padding-left: 80px;
}
.container {
  margin: 90px auto;
  max-width: 800px;
  padding: 40px;
  margin-top: 10px;
  min-height: 100%;
}

.hint {
  color: #40454f;
  font-family: "josefin sans";
  margin-top: 6px;
  font-size: 12px;
  opacity: 0.7;
}

.form-container {
  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
  padding: 18px;
  background-color: white;
  border-radius: 4px;
}

.ai-generator-title {
  font-size: 55px;
  max-width: 100%;
}
.generator {
  text-align: center;
}
.instructions {
  padding: 10px;
  border: 1px solid #aeb0b2;
  border-radius: 2px;
  font-family: "josefin sans";
  width: 80%;
  font-size: 16px;
}

.submit-button {
  margin-left: 10px;
  color: #40454f;
  font-family: "josefin sans";
  border: none;
  background-color: #94d070;
  padding: 0 30px;
  border-radius: 2px;
  font-size: 16px;
}

.recipe {
  color: #3f3d56;
  margin-top: 20px;
  font-weight: 400;
  font-size: 20px;
  background-color: white;
  padding: 20px;
  border-left: #94d070 2px solid;
  font-family: "Josefin sans";
  line-height: 1.1;
  border-radius: 2px;
  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
}

.hidden {
  display: none;
}

@keyframes blink {
  50% {
    opacity: 0;
  }
}
.generating {
  animation: blink 1s step-start 0s infinite;
}

